--- a/scripts/example4.ipynb
+++ b/scripts/example4.ipynb
@@ -27,16 +27,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
+   "execution_count": 29,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing the data manager\n",
+      "Data manager initialization finished\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of dataset failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\H492635\\PycharmProjects\\KNN\\venv\\Lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 276, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\H492635\\PycharmProjects\\KNN\\venv\\Lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 475, in superreload\n",
+      "    module = reload(module)\n",
+      "             ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\Lib\\importlib\\__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 621, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 940, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
+      "  File \"C:\\Users\\H492635\\PycharmProjects\\KNN\\scripts\\dataset.py\", line 134, in <module>\n",
+      "    def create_split_map(data_point : dataset.DataPoint) -> List[Sentence]:\n",
+      "                                      ^^^^^^^\n",
+      "NameError: name 'dataset' is not defined\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
-    "data_set = dataset.load_data_set('../res/cache/datasets/dataset_522') "
+    "data_set = dataset.load_data_set('../res/cache/datasets/dataset_867') "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-08T16:54:03.301630700Z",
-     "start_time": "2024-05-08T16:54:01.202096300Z"
+     "end_time": "2024-05-08T19:13:39.101428500Z",
+     "start_time": "2024-05-08T19:12:49.986842600Z"
     }
    },
    "id": "f0678be15602f0f5"
